--- a/app/src/main/res/layout/historydetail.xml
+++ b/app/src/main/res/layout/historydetail.xml
@@ -96,7 +96,7 @@
         app:layout_constraintTop_toBottomOf="@+id/text_detailDate" />
 
     <TextView
-        android:id="@+id/text_geo"
+        android:id="@+id/text_bro"
         android:layout_width="0dp"
         android:layout_height="wrap_content"
         android:layout_marginTop="16dp"
@@ -114,8 +114,8 @@
         android:layout_marginEnd="16dp"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintHorizontal_bias="0.0"
-        app:layout_constraintStart_toStartOf="@+id/text_geo"
-        app:layout_constraintTop_toBottomOf="@+id/text_geo" />
+        app:layout_constraintStart_toStartOf="@+id/text_bro"
+        app:layout_constraintTop_toBottomOf="@+id/text_bro" />
 
     <TextView
         android:id="@+id/text_sys"
@@ -129,7 +129,7 @@
         app:layout_constraintTop_toBottomOf="@+id/text_dev" />
 
     <TextView
-        android:id="@+id/text_bro"
+        android:id="@+id/text_geo"
         android:layout_width="0dp"
         android:layout_height="wrap_content"
         android:layout_marginTop="16dp"
