Ajout de la possibilité de copié les liens raccourcis de l'historique depuis la liste par un appui long

--- a/app/src/main/res/layout/row_history.xml
+++ b/app/src/main/res/layout/row_history.xml
@@ -6,6 +6,7 @@
     android:layout_width="match_parent"
     android:layout_height="100dp"
     android:clickable="true"
+    android:longClickable="true"
     android:onClick="onClick">
 
     <TextView
